// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <DashboardRoutes /> should render correctly - DC 1`] = `
<body>
  <div>
    <nav
      class="navbar navbar-expand-sm navbar-dark bg-dark"
      data-testid="MyNavbar"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          Asociaciones
        </a>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="me-auto navbar-nav"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="/marvel"
              href="/marvel"
            >
              Marvel
            </a>
            <a
              class="nav-link active"
              data-rr-ui-event-key="/dc"
              href="/dc"
            >
              DC
            </a>
            <a
              class="nav-link"
              data-rr-ui-event-key="/search"
              href="/search"
            >
              Search
            </a>
          </div>
        </div>
        <div
          class="justify-content-end navbar-collapse collapse"
        >
          <span
            class="text-info navbar-text"
            data-testid="MyNavbarUserName"
          >
            Alex
          </span>
          <div
            class="navbar-nav"
          >
            <button
              class="btn btn-dark"
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div>
        <h1
          data-testid="DcScreenTitle"
        >
          DC
        </h1>
        <hr />
        <div
          class="row row-cols-6 row-cols-md-4 row-cols-lg-3 d-flex align-items-stretch"
        >
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Batman"
                    class="card-img-top"
                    src="/assets/dc-batman.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Batman
                    </h5>
                    <p
                      class="card-text"
                    >
                      Bruce Wayne
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Detective Comics #27
                      </small>
                    </p>
                    <a
                      href="/hero/dc-batman"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Superman"
                    class="card-img-top"
                    src="/assets/dc-superman.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Superman
                    </h5>
                    <p
                      class="card-text"
                    >
                      Kal-El
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Action Comics #1
                      </small>
                    </p>
                    <a
                      href="/hero/dc-superman"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Flash"
                    class="card-img-top"
                    src="/assets/dc-flash.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Flash
                    </h5>
                    <p
                      class="card-text"
                    >
                      Jay Garrick
                    </p>
                    <p
                      class="text-muted"
                    >
                      Jay Garrick, Barry Allen, Wally West, Bart Allen
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Flash Comics #1
                      </small>
                    </p>
                    <a
                      href="/hero/dc-flash"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Green Lantern"
                    class="card-img-top"
                    src="/assets/dc-green.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Green Lantern
                    </h5>
                    <p
                      class="card-text"
                    >
                      Alan Scott
                    </p>
                    <p
                      class="text-muted"
                    >
                      Alan Scott, Hal Jordan, Guy Gardner, John Stewart, Kyle Raynor, Jade, Sinestro, Simon Baz
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        All-American Comics #16
                      </small>
                    </p>
                    <a
                      href="/hero/dc-green"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Green Arrow"
                    class="card-img-top"
                    src="/assets/dc-arrow.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Green Arrow
                    </h5>
                    <p
                      class="card-text"
                    >
                      Oliver Queen
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        More Fun Comics #73
                      </small>
                    </p>
                    <a
                      href="/hero/dc-arrow"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Wonder Woman"
                    class="card-img-top"
                    src="/assets/dc-wonder.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Wonder Woman
                    </h5>
                    <p
                      class="card-text"
                    >
                      Princess Diana
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        All Star Comics #8
                      </small>
                    </p>
                    <a
                      href="/hero/dc-wonder"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Martian Manhunter"
                    class="card-img-top"
                    src="/assets/dc-martian.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Martian Manhunter
                    </h5>
                    <p
                      class="card-text"
                    >
                      J'onn J'onzz
                    </p>
                    <p
                      class="text-muted"
                    >
                      Martian Manhunter
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Detective Comics #225
                      </small>
                    </p>
                    <a
                      href="/hero/dc-martian"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Robin/Nightwing"
                    class="card-img-top"
                    src="/assets/dc-robin.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Robin/Nightwing
                    </h5>
                    <p
                      class="card-text"
                    >
                      Dick Grayson
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Detective Comics #38
                      </small>
                    </p>
                    <a
                      href="/hero/dc-robin"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Blue Beetle"
                    class="card-img-top"
                    src="/assets/dc-blue.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Blue Beetle
                    </h5>
                    <p
                      class="card-text"
                    >
                      Dan Garret
                    </p>
                    <p
                      class="text-muted"
                    >
                      Dan Garret, Ted Kord, Jaime Reyes
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Mystery Men Comics #1
                      </small>
                    </p>
                    <a
                      href="/hero/dc-blue"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Black Canary"
                    class="card-img-top"
                    src="/assets/dc-black.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Black Canary
                    </h5>
                    <p
                      class="card-text"
                    >
                      Dinah Drake
                    </p>
                    <p
                      class="text-muted"
                    >
                      Dinah Drake, Dinah Lance
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Flash Comics #86
                      </small>
                    </p>
                    <a
                      href="/hero/dc-black"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Test <DashboardRoutes /> should render correctly - Marvel 1`] = `
<body>
  <div>
    <nav
      class="navbar navbar-expand-sm navbar-dark bg-dark"
      data-testid="MyNavbar"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          Asociaciones
        </a>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="me-auto navbar-nav"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="/marvel"
              href="/marvel"
            >
              Marvel
            </a>
            <a
              class="nav-link"
              data-rr-ui-event-key="/dc"
              href="/dc"
            >
              DC
            </a>
            <a
              class="nav-link"
              data-rr-ui-event-key="/search"
              href="/search"
            >
              Search
            </a>
          </div>
        </div>
        <div
          class="justify-content-end navbar-collapse collapse"
        >
          <span
            class="text-info navbar-text"
            data-testid="MyNavbarUserName"
          >
            Alex
          </span>
          <div
            class="navbar-nav"
          >
            <button
              class="btn btn-dark"
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div>
        <h1
          data-testid="MarvelScreenTitle"
        >
          Marvel
        </h1>
        <hr />
        <div
          class="row row-cols-6 row-cols-md-4 row-cols-lg-3 d-flex align-items-stretch"
        >
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Spider Man"
                    class="card-img-top"
                    src="/assets/marvel-spider.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Spider Man
                    </h5>
                    <p
                      class="card-text"
                    >
                      Peter Parker
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Amazing Fantasy #15
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-spider"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Captain America"
                    class="card-img-top"
                    src="/assets/marvel-captain.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Captain America
                    </h5>
                    <p
                      class="card-text"
                    >
                      Steve Rogers
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Captain America Comics #1
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-captain"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Iron Man"
                    class="card-img-top"
                    src="/assets/marvel-iron.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Iron Man
                    </h5>
                    <p
                      class="card-text"
                    >
                      Tony Stark
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Tales of Suspense #39
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-iron"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Thor"
                    class="card-img-top"
                    src="/assets/marvel-thor.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Thor
                    </h5>
                    <p
                      class="card-text"
                    >
                      Thor Odinson
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Journey into Myster #83
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-thor"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Hulk"
                    class="card-img-top"
                    src="/assets/marvel-hulk.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Hulk
                    </h5>
                    <p
                      class="card-text"
                    >
                      Bruce Banner
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        The Incredible Hulk #1
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-hulk"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Wolverine"
                    class="card-img-top"
                    src="/assets/marvel-wolverine.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Wolverine
                    </h5>
                    <p
                      class="card-text"
                    >
                      James Howlett
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        The Incredible Hulk #180
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-wolverine"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Daredevil"
                    class="card-img-top"
                    src="/assets/marvel-daredevil.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Daredevil
                    </h5>
                    <p
                      class="card-text"
                    >
                      Matthew Michael Murdock
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Daredevil #1
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-daredevil"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Hawkeye"
                    class="card-img-top"
                    src="/assets/marvel-hawkeye.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Hawkeye
                    </h5>
                    <p
                      class="card-text"
                    >
                      Clinton Francis Barton
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        Tales of Suspense #57
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-hawkeye"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Cyclops"
                    class="card-img-top"
                    src="/assets/marvel-cyclops.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Cyclops
                    </h5>
                    <p
                      class="card-text"
                    >
                      Scott Summers
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        X-Men #1
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-cyclops"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex p-1"
          >
            <div
              class="card animate__animated animate__fadeIn"
              data-testid="HeroCard"
            >
              <div
                class="row no-gutters"
              >
                <div
                  class="col-4"
                >
                  <img
                    alt="Silver Surfer"
                    class="card-img-top"
                    src="/assets/marvel-silver.jpg"
                  />
                </div>
                <div
                  class="col-8"
                >
                  <div
                    class="card-body"
                  >
                    <h5
                      class="card-title"
                      data-testid="HeroCardSuperHero"
                    >
                      Silver Surfer
                    </h5>
                    <p
                      class="card-text"
                    >
                      Norrin Radd
                    </p>
                    <p
                      class="card-text"
                    >
                      <small
                        class="text-muted"
                      >
                        The Fantastic Four #48
                      </small>
                    </p>
                    <a
                      href="/hero/marvel-silver"
                    >
                      Más...
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
